# lob-simulation

./: .devcontainer.json  .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  pyproject.toml
lob_simulation/: __main__.py  generator.py  lob.py  util.py
lob_simulation/model/: __init__.py  df.py  side.py  sr.py
