[tool.poetry]
name = "lob-simulation"
version = "0.1.0"
description = ""
authors = ["banr1 <banri.yanahama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.0"
scipy = "^1.9.2"
matplotlib = "^3.6.1"
ipykernel = "^6.16.0"
pydantic = "^1.10.2"
loguru = "^0.6.0"
seaborn = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pysen = {version = "^0.10.2", extras = ["lint"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
