[tool.poetry]
name = "lob-simulation"
version = "0.1.0"
description = ""
authors = ["banr1 <banri.yanahama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
pandas = "^1.5.0"
scipy = "^1.9.2"
matplotlib = "^3.6.1"
ipykernel = "^6.16.0"
pydantic = "^1.10.2"
loguru = "^0.6.0"
seaborn = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pysen = "0.10.2"
black = "22.8"
isort = "5.1.4"
mypy = "0.971"
flake8 = "5.0.4"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py310"
[[tool.pysen.lint.mypy_targets]]
  paths = ["./lob_simulation"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
